--- a/assets/styles/_fonts.scss
+++ b/assets/styles/_fonts.scss
@@ -1,6 +1,6 @@
-// @font-face {
-//     font-family: 'Name-font';
-//     font-style: normal;
-//     font-weight: normal;
-//     src: url("../fonts/folder/name-font.woff2") format("woff2");
-// }
+@font-face {
+    font-family: 'Satoshi';
+    font-style: normal;
+    font-weight: 400;
+    src: url("../../assets/fonts/Satoshi/Satoshi-Regular.woff2") format("woff2");
+}
