--- a/assets/styles/_vars.scss
+++ b/assets/styles/_vars.scss
@@ -1,15 +1,18 @@
 // Colors
 
 $white: #fff;
-$dark-primary: #2A254B;
 $primary: #4E4D93;
+$dark-primary: #2A254B;
+$light-primary: #726E8D;
 $light-gray: #F9F9F9;
 $border-gray: #EBE8F4;
 $border-dark: #CAC6DA;
+$dark-logo: #22202E;
+$light-logo: #fff;
 
 // Fonts
 
-$main-font: 'name_font';
+$main-font: 'Satoshi';
 
 // Other
 
