--- a/assets/styles/parts/layouts/header.scss
+++ b/assets/styles/parts/layouts/header.scss
@@ -1,3 +1,85 @@
 .header {
+    position: fixed;
+    z-index: 11;
     flex: 0 0 auto;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    padding: 25px 0;
+    background-color: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(25px);
+    transition: transform $transition-time;
+
+    .container {
+        display: grid;
+        grid-template-columns: repeat(2, max-content) auto;
+        align-items: center;
+        grid-column-gap: 152px;
+    }
+
+    .logo {
+        width: 65px;
+        height: 30px;
+    }
+
+    &__nav {}
+
+    &__nav-list {
+        display: grid;
+        grid-auto-flow: column;
+        align-items: center;
+        justify-content: start;
+        grid-column-gap: 44px;
+    }
+
+    &__nav-link {
+        color: $light-primary;
+        transition: color $transition-time;
+
+        &:hover {
+            color: $primary;
+        }
+    }
+
+    &__block-links {
+        display: grid;
+        grid-auto-flow: column;
+        justify-content: end;
+        grid-column-gap: 16px;
+    }
+
+    &__link {
+        position: relative;
+        width: 20px;
+        height: 20px;
+        transition: opacity $transition-time;
+
+        &:hover {
+            opacity: 0.6;
+        }
+
+        span {
+            position: absolute;
+            top: 0;
+            right: 0;
+            transform: translate(50%, -50%);
+            display: grid;
+            align-items: center;
+            justify-content: center;
+            width: 17px;
+            height: 17px;
+            font-size: 11px;
+            line-height: 1em;
+            color: $white;
+            border-radius: 100%;
+            background-color: $primary;
+        }
+    }
+
+    &__link-icon {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        object-position: center;
+    }
 }
