--- a/assets/styles/_fonts.scss
+++ b/assets/styles/_fonts.scss
@@ -4,3 +4,10 @@
     font-weight: 400;
     src: url("../../assets/fonts/Satoshi/Satoshi-Regular.woff2") format("woff2");
 }
+
+@font-face {
+    font-family: 'Clash-Display';
+    font-style: normal;
+    font-weight: 400;
+    src: url("../../assets/fonts/Clash-display/ClashDisplay-Regular.woff2") format("woff2");
+}
