--- a/assets/styles/_vars.scss
+++ b/assets/styles/_vars.scss
@@ -3,7 +3,9 @@
 $white: #fff;
 $primary: #4E4D93;
 $dark-primary: #2A254B;
+$very-dark-primary: #1E193E;
 $light-primary: #726E8D;
+$gray: #5B5676;
 $light-gray: #F9F9F9;
 $border-gray: #EBE8F4;
 $border-dark: #CAC6DA;
@@ -13,6 +15,7 @@ $light-logo: #fff;
 // Fonts
 
 $main-font: 'Satoshi';
+$secon-font: 'Clash-Display';
 
 // Other
 
