--- a/assets/styles/parts/_components.scss
+++ b/assets/styles/parts/_components.scss
@@ -1,3 +1,5 @@
 // @import './components/component';
 
 @import './components/notify';
+@import './components/social-links';
+@import './components/info-card';
