--- a/assets/styles/parts/layouts/header.scss
+++ b/assets/styles/parts/layouts/header.scss
@@ -6,7 +6,7 @@
     left: 0;
     width: 100vw;
     padding: 25px 0;
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: rgba(255, 255, 255, 0.7);
     backdrop-filter: blur(25px);
     transition: transform $transition-time;
 
@@ -20,6 +20,10 @@
     .logo {
         width: 65px;
         height: 30px;
+
+        &__icon {
+            fill: $dark-logo;
+        }
     }
 
     &__nav {}
