--- a/assets/styles/parts/ui/logo.scss
+++ b/assets/styles/parts/ui/logo.scss
@@ -4,6 +4,9 @@
     justify-content: start;
 
     &__icon {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
         fill: $dark-logo;
     }
 }
