api is connected + a block with benefits and products is made

--- a/assets/styles/parts/_components.scss
+++ b/assets/styles/parts/_components.scss
@@ -3,3 +3,5 @@
 @import './components/notify';
 @import './components/social-links';
 @import './components/info-card';
+@import './components/products';
+@import './components/product';
