new blocks have been made

--- a/assets/styles/parts/_sections.scss
+++ b/assets/styles/parts/_sections.scss
@@ -2,3 +2,5 @@
 
 @import './sections/performance';
 @import './sections/advantages';
+@import './sections/preview-products';
+@import './sections/little-info';
