a product card has been made + the logic of working with the api has been adjusted

--- a/assets/styles/parts/_components.scss
+++ b/assets/styles/parts/_components.scss
@@ -4,4 +4,5 @@
 @import './components/social-links';
 @import './components/info-card';
 @import './components/products';
-@import './components/product';
+@import './components/product-card';
+@import './components/input-mailing';
