--- a/assets/styles/parts/_sections.scss
+++ b/assets/styles/parts/_sections.scss
@@ -4,3 +4,5 @@
 @import './sections/advantages';
 @import './sections/preview-products';
 @import './sections/little-info';
+@import './sections/mailing';
+@import './sections/product';
