basket development started

--- a/assets/styles/parts/_components.scss
+++ b/assets/styles/parts/_components.scss
@@ -6,3 +6,4 @@
 @import './components/products';
 @import './components/product-card';
 @import './components/input-mailing';
+@import './components/product-card-second';
